Fix overflow issue on auth forms

--- a/frontend/src/stylesheets/components/session/_session_form.scss
+++ b/frontend/src/stylesheets/components/session/_session_form.scss
@@ -1,11 +1,13 @@
 .session-form {
   width: 100%;
-  height: 100%;
+  height: 900px;
   align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   font-size: 25px;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .session-form-header {
